Design changes and search functionality
Listview design in main page has changed. Search movie functionality has added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".reminder" />
         <activity android:name=".movieDetails"/>
         <activity android:name=".selectedGenreMovies" />
+        <activity android:name=".searchMovie" />
 <!--
         <receiver android:name="AlarmReceiver"></receiver>
         -->
