--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/AppTheme">
 
 
-        <activity android:name=".pages.splashScreen"
+        <activity
+            android:name=".pages.splashScreen"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
